--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!-- Write your HTML in this file -->
 <!Doctype html>
 <html lang = en>
-<head> </head>
+<head> 
+  <title> </title>
+</head>
 <body> </body>
 </html>
