--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <title>Title of Page</title>
+  <link rel = 'stylesheet' type = 'text/css' href = 'style.css'>
 </head>
 <body> </body>
 </html>
